--- a/app/views/itineraries/add_itinerary_traveller.html.erb
+++ b/app/views/itineraries/add_itinerary_traveller.html.erb
@@ -1,4 +1,4 @@
-<%= select_tag :schedule_id, options_from_collection_for_select(@clients,'id','get_client_name'), prompt: 'Please select client', id: 'client_id', class: 'form-control client' %><br>
+<%= select_tag :client_id, options_from_collection_for_select(@clients,'id','get_client_name', selected: params[:user_id]), prompt: 'Please select client', id: 'client_id', class: 'form-control client' %><br>
 
 
 
@@ -6,7 +6,8 @@
 </div>
 
 <script type="text/javascript">
-  $('#client_id').change(function() {
+  get_client()
+  function get_client() {
     var client_id = $("#client_id option:selected").val();
     $.ajax({
         url: '<%= add_itinerary_traveller_itinerary_path %>',
@@ -14,5 +15,8 @@
         data: {client_id: client_id},
         dataType: 'script'
       });
+  }
+  $('#client_id').change(function() {
+    get_client()
   });
 </script>
